# libasyik

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  AGENT.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.windows  LICENSE  README.md  TODO  build.bat  libasyik-config.cmake  run_test.bat  vcpkg.json
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/skills/libasyik-development/: SKILL.md
benchmarks/: CMakeLists.txt  run_benchmark.sh  setup.sh
benchmarks/actix/: Cargo.toml
benchmarks/actix/src/: main.rs
benchmarks/asio/: bench_asio.cpp
benchmarks/beast/: bench_beast.cpp
benchmarks/drogon/: bench_drogon.cpp
benchmarks/gin/: go.mod  main.go
benchmarks/io_uring/: bench_io_uring.cpp
benchmarks/libasyik/: bench_server.cpp
benchmarks/libasyik_raw/: bench_libasyik_raw.cpp
benchmarks/scripts/: post_echo.lua  post_large.lua
docs/: benchmarking.md  building-windows.md  cache.md  designs.md  http.md  integration.md  logging.md  rate_limit.md  service.md  sql.md  why.md
include/libasyik/: asyik_fwd.hpp  asyik_round_robin.hpp  common.hpp  error.hpp  http.hpp  http_client.hpp  http_server.hpp  http_static.hpp  http_types.hpp  http_websocket.hpp  internal_api.hpp  mainloop.hpp  memcache.hpp  object_pool.hpp  pooled_guarded_stack.hpp  profiling.hpp  rate_limit.hpp  route_table.hpp  service.hpp  sql.hpp  version.hpp
include/libasyik/internal/: asio_internal.hpp  digestauth.hpp  soci_internal.hpp  use_fiber_future.hpp
include/libasyik/internal/detail/: use_fiber_future_impl.hpp
src/: CMakeLists.txt  http.cpp  http.cpp.fix  http_client.cpp  http_common.cpp  http_server_plain.cpp  http_server_ssl.cpp  http_static.cpp  http_websocket.cpp  http_websocket_plain.cpp  http_websocket_ssl.cpp  mainloop.cpp  service.cpp  sql.cpp
tests/: CMakeLists.txt  test.cpp  test_and_coverage.sh  test_http.cpp  test_memcache.cpp  test_rate_limit.cpp  test_service.cpp  test_sql.cpp  test_static.cpp  test_stress_http.cpp
