[package]
name = "bench_actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
num_cpus = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
